# axonize

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docs/: MILESTONES.md  TODO-DASHBOARD.md  TODO-DOCS.md  TODO-INFRA.md  TODO-SDK.md  TODO-SERVER.md  WHY-AXONIZE.md  dashboard-guide.md  getting-started.md  sdk-reference.md  server-deployment.md
docs/visualization/: index.html
examples/: custom_model.py  diffusers_integration.py  ollama_integration.py  quickstart.py  vllm_integration.py
migrations/: migrate.sh
migrations/clickhouse/: 001_init.sql  002_add_gpu_vendors.sql  003_add_tenant_id.sql
sdk-py/: pyproject.toml
sdk-py/benchmarks/: bench_overhead.py
sdk-py/src/axonize/: __init__.py  _buffer.py  _config.py  _context.py  _exporter.py  _gpu.py  _gpu_apple.py  _gpu_backend.py  _gpu_nvml.py  _llm.py  _processor.py  _sdk.py  _span.py  _trace.py  _types.py
sdk-py/src/axonize/integrations/: __init__.py  openai.py
sdk-py/tests/: test_buffer.py  test_config.py  test_context.py  test_exporter.py  test_gpu.py  test_gpu_apple.py  test_gpu_backend.py  test_integration.py  test_llm.py  test_openai_integration.py  test_placeholder.py  test_processor.py  test_sampling.py  test_sdk.py  test_span.py  test_trace.py  test_types.py
server/: Dockerfile  config.example.yaml  go.mod
tests/: e2e_test.py  load_test.py
(+33 files in other folders)
