[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axonize"
version = "0.1.0"
description = "Observability SDK for AI inference workloads"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-proto>=1.20",
    "pynvml>=11.5",
    "grpcio>=1.60",
    "protobuf>=4.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10,<1.19",
    "types-protobuf>=4.24",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pynvml", "pynvml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
